# gBLAS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: common.h
src/data_types/: bfloat16.h  conversions.h  float16.h  float8.h  non_conventional_dtypes.h
src/gTensor/: DataBuffer.cpp  DataBuffer.h  gTensor.cpp  gTensor.h  gTensorIterator.cpp  gTensorIterator.h
src/operations/: axpy.cpp  axpy.h
tests/: CMakeLists.txt  data_type_tests.cpp  gtensor_tests.cpp
